Project finance_telegram_bot {
  database_type: 'PostgreSQL'
  Note: 'Database schema visualization for a finance Telegram bot'
}

Enum transaction_type {
  income
  expense
}

Table users {
  id bigint [pk, increment]
  telegram_id bigint [not null, unique, note: 'Telegram user ID']
  username varchar(255)
  first_name varchar(255)
  last_name varchar(255)
  created_at timestamp [not null, default: `now()`]
}

Table categories {
  id bigint [pk, increment]
  user_id bigint [not null]
  name varchar(100) [not null]
  type transaction_type [not null]
  created_at timestamp [not null, default: `now()`]

  indexes {
    (user_id, name, type) [unique]
  }
}

Table transactions {
  id bigint [pk, increment]
  user_id bigint [not null]
  category_id bigint [not null]
  amount decimal(12,2) [not null, note: 'Positive transaction amount']
  description varchar(500)
  created_at timestamp [not null, default: `now()`]

  indexes {
    (user_id, created_at)
    category_id
  }
}

Ref: categories.user_id > users.id [delete: cascade]
Ref: transactions.user_id > users.id [delete: cascade]
Ref: transactions.category_id > categories.id [delete: restrict]
